--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,38 @@
+/*background image*/
 body {
     background-image: url(../images/dust_scratches.png)
 }
 
-.headfont {
+
+/* font for all headings */
+.headfont { 
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-.midfont {
+
+/* font color for headings in middle section: About, Portfolio, Contact, Connect with Me */
+.midfont { 
     color: #4aaaa5;
+    
 }
 
-header {
+/* font for middle section and navigation box */
+.allotherfont {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+
+/* white bar across top; includes name and navigation links */
+header { 
     background-color: #ffffff;
     overflow: auto;
     clear: both;
-    margin-bottom: 20px;
+    margin: -10px -10px 20px -10px;
 }
 
-.namebox {
+
+/* name in header, top left */
+.namebox { 
     float: left;
     padding: 0px 25px 0px 25px;
     background-color: #4aaaa5;
@@ -25,50 +40,76 @@ header {
     margin-left: 160px;
 }
 
-.nav {
+
+/* navigation box in header, top right */
+.nav { 
     float: right;
     width: 270px;
-    margin-top: 15px;
+    margin: 15px 125px 0px 0px;
     color: #777777;
-    margin-right: 160px;
 }
 
-.navA {
+
+/* About link inside navigation box */
+.navA { 
+    float: left;
+    width: 25%;
+}
+
+
+/* Portfolio link in navbox  */
+.navP { 
     float: left;
     width: 33.3%;
 }
 
-.navP {
+
+/* Contact link in navbox */
+.navC { 
     float: left;
     width: 33.3%;
 }
 
-.navC {
-    float: left;
-    width: 33.3%;
-}
 
-.mid {
+/* entire middle section: About Me, Portfolio, Contact, Connect with Me*/
+.mid { 
     overflow: auto;
     clear: both;
     margin: 0px 160px 20px 160px;
 }
 
-.about {
+
+/* About Me section */
+.about { 
     float: left;
     background-color: #ffffff;
     width: 67%;
 }
 
-.connect {
+
+/*self portrait*/
+.selfie {
+    float: left;
+    margin: 0px 20px 10px 0px;
+}
+
+
+
+/* Connect with Me section */
+.connect { 
     float: right;
     background-color: #ffffff;
     width: 28%;
     margin: 0px 0px 20px 0px;
 }
 
-.footer {
+
+/* grey bar across bottom */
+.footer { 
+    clear: both;
+    overflow: auto;
     background-color: #666666;
     color: #ffffff;
     padding: 25px 430px 25px 430px;
+    margin: 0px -10px 0px -10px;
 }
