--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*background image*/
+/* background image */
 body {
     background-image: url(../images/dust_scratches.png)
 }
@@ -16,7 +16,8 @@ body {
     
 }
 
-/* font for middle section and navigation box */
+
+/* font for paragraph in middle section and navigation box */
 .allotherfont {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
@@ -87,12 +88,29 @@ header {
 }
 
 
+/* About Me heading*/
+h2 {
+    margin: 20px;
+}
+
+
+/* horizontal rule in About Me and Connect with Me sections*/
+hr {
+    margin: 0px 20px 0px 20px;
+}
+
+
 /*self portrait*/
 .selfie {
     float: left;
-    margin: 0px 20px 10px 0px;
+    margin: 20px;
 }
 
+
+/* text in about me p tag */
+.aboutp {
+    margin: 20px;
+}
 
 
 /* Connect with Me section */
@@ -104,10 +122,24 @@ header {
 }
 
 
-/* grey bar across bottom */
-.footer { 
+/*Connect with Me heading*/
+h3 {
+    margin: 20px;
+}
+
+
+/* strip above footer */
+.footervalance {
     clear: both;
     overflow: auto;
+    background-color: #4aaaa5;
+    margin: 0px -10px 0px -10px;
+    padding: 5px;
+}
+
+
+/* grey bar across bottom */
+.footer { 
     background-color: #666666;
     color: #ffffff;
     padding: 25px 430px 25px 430px;
