--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ body {
 /* font for paragraphs in main section and navigation box */
 .allotherfont {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
 }
 
 
@@ -29,7 +30,7 @@ header {
     height: 90px;
     overflow: auto;
     clear: both;
-    margin: -10px -10px 20px -10px;
+    margin: -10px -10px 30px -10px;
     border-color: #cccccc;
     border-style: solid;
     border-width: 2px;
@@ -51,7 +52,7 @@ nav {
     float: right;
     width: 270px;
     margin: 15px 125px 0px 0px;
-    color: #777777;
+    ;
 }
 
 
@@ -98,7 +99,7 @@ main {
 
 /* "About Me" heading */
 h2 {
-    margin: 20px;
+    margin: 32px;
 }
 
 
@@ -125,11 +126,9 @@ hr {
 aside { 
     background-color: #ffffff;
     height: 200px;
-    /*width: 270px;*/
-    width: 28%;
+    width: 270px;
+    /*width: 28%;*/
     float: right;
-    margin: 0px 0px 20px 0px;
-    padding-bottom: 20px;
     border-color: #dddddd;
     border-style: solid;
     border-width: 1px;
@@ -142,7 +141,11 @@ h3 {
 }
 
 .social {
-    margin-left: 40px;
+    margin: 25px;
+}
+
+.stack {
+    margin-bottom: 3px;
 }
 
 
@@ -159,7 +162,6 @@ h3 {
 /* grey bar across bottom */
 footer { 
     background-color: #666666;
-    color: #e6e8e9;
     padding: 25px 430px 25px 430px;
     margin: 0px -10px 0px -10px;
     font-size: 12px;
